Fix iOS line-wrapping bug

--- a/src/scss/info.scss
+++ b/src/scss/info.scss
@@ -1,5 +1,5 @@
 .clock, .weather {
-	align-items: flex-start;
+	align-items: stretch;
 	height: to-rem(155px);
 	display: flex;
 	flex-direction: column;
